--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@
   font-size: 15px;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: linear-gradient(to left, rgb(80, 136, 158), rgb(94, 48, 100));
+}
+
 label {
   display: flex;
   font-size: 2rem;
@@ -14,7 +23,7 @@ label {
 input {
   font-size: 1.5rem;
   width: 20rem;
-  border: 3px solid gray;
+  border: 3px solid rgb(115, 255, 0);
   margin-left: 1rem;
   border-radius: 10px;
 }
@@ -23,7 +32,7 @@ select {
   font-size: 1.5rem;
   width: 17.6rem;
   margin-left: 1rem;
-  border: 3px solid gray;
+  border: 3px solid rgb(115, 255, 0);
   text-transform: capitalize;
   border-radius: 10px;
 }
@@ -32,12 +41,12 @@ button {
   padding: 0.5rem 10rem;
   font-size: 1.5rem;
   font-weight: bolder;
-  border: 3px solid gray;
+  border: 3px solid rgb(115, 255, 0);
   border-radius: 15px;
 }
 
 button:hover {
-  background-color: rgb(231, 223, 223);
+  background-color: rgb(224, 240, 11);
 }
 
 .result-box {
@@ -51,8 +60,9 @@ button:hover {
 }
 
 .result-output {
-  border: 3px solid gray;
+  border: 3px solid rgb(115, 255, 0);
   font-size: 2rem;
   border-radius: 1.2rem;
   width: 21rem;
+  background-color: whitesmoke;
 }
